--- a/.github/workflows/etl.yml
+++ b/.github/workflows/etl.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt || pip install pandas pyarrow supabase python-dotenv
+          pip install -r requirements.txt || pip install pandas pyarrow supabase python-dotenv requests
 
       - name: Run ETL main script
         run: |
