feat: Enable external triggers for ETL pipeline with repository_dispatch

--- a/.github/workflows/etl.yml
+++ b/.github/workflows/etl.yml
@@ -5,7 +5,9 @@ on:
     branches:
       - main
   workflow_dispatch:  # allow manual runs
-
+  repository_dispatch: # allow external triggers
+    types: [run_pipeline]
+    
 jobs:
   etl_job:
     runs-on: ubuntu-latest
