feat: Add comprehensive dependency management and project structure documentation
- Introduced `DEPENDENCY_MANAGEMENT.md` to outline dependency management using pip-compile.
- Created `PROJECT_STRUCTURE.md` detailing the organization of the FPL-ETL project, including directory structure and module descriptions.
- Added `requirements.lock` for locked dependencies.
- Implemented versioning in `src/__init__.py`.
- Developed ETL modules for league standings, player data extraction, and data merging.
- Established upload functionality to Supabase in `upload_database.py`.
- Enhanced logging throughout the ETL process for better traceability.
- Implemented utility functions for data fetching and CSV handling in `utils.py`.
- Updated main pipeline in `main.py` to orchestrate the ETL process.

--- a/.github/workflows/etl.yml
+++ b/.github/workflows/etl.yml
@@ -28,8 +28,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt || pip install pandas pyarrow supabase python-dotenv requests
+          pip install -r requirements.lock --no-deps || pip install -r requirements.txt
 
       - name: Run ETL main script
         run: |
-          python main.py
+          python -m src.main
