feat: Implement Gold Layer ETL for dimensional model with dimension and fact tables
- Added gold_dimensions.py to create dimension tables for managers, clubs, players, fixtures, and gameweeks.
- Added gold_facts.py to create fact tables for player performance and manager picks.
- Introduced gold_seasonal_stats.py for player seasonal statistics.
- Created silver.py to transform raw data from the Bronze layer into cleaned datasets.
- Developed main_medallion.py as the entry point for the ETL pipeline, orchestrating the Bronze, Silver, and Gold layers.

--- a/.github/workflows/etl.yml
+++ b/.github/workflows/etl.yml
@@ -1,11 +1,20 @@
-name: Run ETL Pipeline
+name: FPL ETL Pipeline (Medallion)
 
 on:
+  # Trigger on push to main
   push:
     branches:
       - main
-  workflow_dispatch:  # allow manual runs
-  repository_dispatch: # allow external triggers
+  
+  # Manual trigger from GitHub UI
+  workflow_dispatch:
+  
+  # Scheduled runs (every gameweek - Saturdays at 2 AM UTC)
+  schedule:
+    - cron: '0 2 * * 6'  # Every Saturday at 2 AM UTC
+  
+  # External API triggers
+  repository_dispatch:
     types: [run_pipeline]
     
 jobs:
@@ -30,6 +39,14 @@ jobs:
         run: |
           pip install -r requirements.lock --no-deps || pip install -r requirements.txt
 
-      - name: Run ETL main script
+      - name: Run Medallion ETL Pipeline
         run: |
-          python -m src.main
+          python -m src.main_medallion
+      
+      - name: Upload logs (on failure)
+        if: failure()
+        uses: actions/upload-artifact@v3
+        with:
+          name: etl-logs
+          path: logs/*.log
+          retention-days: 7
